--- a/LoginPage.xaml
+++ b/LoginPage.xaml
@@ -18,8 +18,8 @@
             </StackPanel>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,194,0,40" Width="200" Grid.RowSpan="2">
-                <Button Content="Zaloguj się" Width="80" Margin="5" Click="LoginButton_Click"/>
-                <Button Content="Zarejestruj się" Width="100" Margin="5" Click="RegisterButton_Click"/>
+                <Button Content="Zaloguj się" Width="80" Margin="5" Click="LoginButton_Click" Height="25"/>
+                <Button Content="Zarejestruj się" Width="100" Margin="5" Click="RegisterButton_Click" Height="25"/>
             </StackPanel>
         </Grid>
     </Border>
